# helmet

./: .gitmodules  CMakeLists.txt  README.md  license.txt
Applications/: CMakeLists.txt
Applications/Topper/: CMakeLists.txt
Applications/Topper/plugins/: CMakeLists.txt
Applications/Topper/plugins/Helmet.Enterprise.TCPProtocol/: CMakeLists.txt
Applications/Topper/plugins/Helmet.Enterprise.TCPProtocol/src/: Configuration.hpp  Module.cpp  Module.hpp  Plugin.cpp  Plugin.hpp  ProtocolService.cpp  ProtocolService.hpp
Applications/Topper/plugins/Topper.Exchange.Kraken/: CMakeLists.txt
Applications/Topper/plugins/Topper.Exchange.Kraken/src/: Configuration.hpp  Exchange.cpp  Exchange.hpp  Module.cpp  Module.hpp  Plugin.cpp  Plugin.hpp
Applications/Topper/plugins/Topper.Strategy.Threshold/: CMakeLists.txt
Applications/Topper/plugins/Topper.Strategy.Threshold/src/: Configuration.hpp  Module.cpp  Module.hpp  Plugin.cpp  Plugin.hpp  Strategy.cpp  Strategy.hpp
Applications/Topper/plugins/Topper.Transaction.Blockchain/: CMakeLists.txt
Applications/Topper/plugins/Topper.Transaction.Blockchain/src/: Block.cpp  Block.hpp  Blockchain.cpp  Blockchain.hpp  BlockchainNode.cpp  BlockchainNode.hpp  Configuration.hpp  Module.cpp  Module.hpp  Plugin.cpp  Plugin.hpp
Applications/Topper/plugins/Topper.Workbench/: CMakeLists.txt
Applications/Topper/plugins/Topper.Workbench/src/: Action.cpp  Action.hpp  Configuration.hpp  Connection.cpp  Connection.hpp  Entity.cpp  Entity.hpp  EntityFactory.cpp  EntityFactory.hpp  Event.cpp  Event.hpp  Frame.cpp  Frame.hpp  LogModel.cpp  LogModel.hpp  LogView.cpp  LogView.hpp  Menu.cpp  Menu.hpp  MenuBar.cpp  MenuBar.hpp  MenuItem.cpp  MenuItem.hpp  Model.cpp  Model.hpp  Module.cpp  Module.hpp  Notebook.cpp  Notebook.hpp  NotebookPage.cpp  NotebookPage.hpp  Plugin.cpp  Plugin.hpp  RootEntity.cpp  RootEntity.hpp  StatusBar.cpp  StatusBar.hpp  TickerChartView.cpp  TickerChartView.hpp  TickerDataModel.cpp  (+13 more)
Applications/Topper/src/: Application.cpp  Application.hpp
CMake/Modules/: FindHelmet.cmake  FindHelmetCore.cmake  Utilities.cmake  fw-wxWidgets.cmake
Frameworks/: CMakeLists.txt
Frameworks/Helmet/: CMakeLists.txt
Frameworks/Helmet/Application/: CMakeLists.txt
Frameworks/Helmet/Application/include/Helmet/Application/: Configuration.hpp  I_Application.hpp
Frameworks/Helmet/Application/src/: I_Application.cpp
Frameworks/Helmet/Blockchain/: CMakeLists.txt
Frameworks/Helmet/Blockchain/src/: I_Block.cpp  I_BlockPayload.cpp  I_Blockchain.cpp  I_BlockchainNode.cpp  I_BlockchainPlugin.cpp  I_CompositePayload.cpp
Frameworks/Helmet/Blockchain/src/Contracts/: I_Contract.cpp  I_ContractPayload.cpp  I_ContractsNode.cpp
Frameworks/Helmet/Blockchain/src/Cryptocurrency/: I_CryptocurrencyNode.cpp  I_CurrencyPayload.cpp  I_Transaction.cpp
Frameworks/Helmet/Core/: CMakeLists.txt
Frameworks/Helmet/Core/include/Helmet/Core/: Configuration.hpp
Frameworks/Helmet/Core/include/Helmet/Core/Plugin/: I_Environment.hpp  I_Module.hpp  I_ModuleInfo.hpp  I_ModuleManager.hpp  I_ModuleService.hpp  I_Plugin.hpp  I_PluginManager.hpp
Frameworks/Helmet/Core/src/Event/: I_Action.cpp  I_Connection.cpp  I_Event.cpp  I_Observable.cpp  I_Observer.cpp
Frameworks/Helmet/Core/src/Exception/: Exception.cpp  NotImplementedException.cpp
Frameworks/Helmet/Core/src/Plugin/: Environment.cpp  Environment.hpp  I_Environment.cpp  I_Module.cpp  I_ModuleInfo.cpp  I_ModuleManager.cpp  I_ModuleService.cpp  I_Plugin.cpp  I_PluginManager.cpp  ModuleInfo.cpp  ModuleInfo.hpp  ModuleManager.cpp  ModuleManager.hpp  ModuleService.cpp  ModuleService.hpp  PluginManager.cpp  PluginManager.hpp
Frameworks/Helmet/Core/src/Thread/: Condition.cpp  Condition.hpp  ConditionFactory.cpp  CriticalSection.cpp  I_Condition.cpp  I_Mutex.cpp  I_Thread.cpp  Mutex.cpp  Mutex.hpp  MutexFactory.cpp  Mutex_posix.hpp  SynchronizedQueue.cpp  Thread.cpp  Thread.hpp  ThreadFactory.cpp  ThreadPool.cpp
Frameworks/Helmet/Core/src/Utility/: I_Cleanable.cpp
Frameworks/Helmet/Core/test/: CMakeLists.txt
Frameworks/Helmet/Core/test/src/: plugin.tests.cpp
Frameworks/Helmet/Enterprise/: CMakeLists.txt
Frameworks/Helmet/Enterprise/src/: ApplicationServer.cpp  ApplicationServer.hpp  ApplicationServerManager.cpp  ApplicationServerManager.hpp  I_ApplicationServer.cpp  I_ApplicationServerManager.cpp  I_ApplicationService.cpp  I_Peer.cpp  I_ProtocolService.cpp  I_ProtocolServicePlugin.cpp  I_RequestHandler.cpp  I_ResourceLocation.cpp  I_StartupShutdownParticipant.cpp  ResourceLocation.cpp  ResourceLocation.hpp
Frameworks/Helmet/Trading/: CMakeLists.txt
Frameworks/Helmet/Trading/src/Exchange/: I_Exchange.cpp  I_ExchangePlugin.cpp
Frameworks/Helmet/Trading/src/Strategy/: I_Strategy.cpp  I_StrategyPlugin.cpp
Frameworks/Helmet/Workbench/: CMakeLists.txt
Frameworks/Helmet/Workbench/src/: I_Controller.cpp  I_Entity.cpp  I_Event.cpp  I_Frame.cpp  I_Menu.cpp  I_MenuBar.cpp  I_MenuItem.cpp  I_Model.cpp  I_Notebook.cpp  I_NotebookPage.cpp  I_StatusBar.cpp  I_View.cpp  I_Workbench.cpp  I_WorkbenchPlugin.cpp
Frameworks/include/Helmet/Application/: Configuration.hpp  I_Application.hpp
Frameworks/include/Helmet/Blockchain/: Configuration.hpp  I_Block.hpp  I_BlockPayload.hpp  I_Blockchain.hpp  I_BlockchainNode.hpp  I_BlockchainPlugin.hpp  I_CompositePayload.hpp  I_Node.hpp
Frameworks/include/Helmet/Core/: Configuration.hpp
Frameworks/include/Helmet/Enterprise/: Configuration.hpp  Exceptions.hpp  I_AbstractNetworkAddressFactory.hpp  I_AbstractNetworkServiceFactory.hpp  I_Address.hpp  I_ApplicationServer.hpp  I_ApplicationServerManager.hpp  I_ApplicationService.hpp  I_ApplicationServiceFactory.hpp  I_Connection.hpp  I_Container.hpp  I_Endpoint.hpp  I_FullyQualifiedResourceLocation.hpp  I_Message.hpp  I_MessageFactory.hpp  I_MessageHandler.hpp  I_MessageHeader.hpp  I_MessageRegistry.hpp  I_MessageType.hpp  I_NetworkAddress.hpp  I_NetworkAddressFactory.hpp  I_NetworkConnection.hpp  I_NetworkConnectionListener.hpp  I_NetworkManager.hpp  I_NetworkReadReadyListener.hpp  I_NetworkService.hpp  I_NetworkServiceFactory.hpp  (+16 more)
(+57 files in other folders)
